test/compile-fail/resolution/conflicts/variants/expected.txt
error: the variant `a` is defined multiple times
 --> top.rhdl:1:12
  |
1 | enum a { a, a }
  |          - previous definition of the variant `a` here
1 | enum a { a, a }
  |             ^ `a` redefined here
